--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
+    <button id='show-modal'>Show modal</button>
+    <div id='modal-container'></div>
     <ul class='pokemon-list'></ul>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
