--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Simple JS app</title>
+    <title>Simple JS App</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <button id='show-modal'>Show modal</button>
     <div id='modal-container'></div>
+    <div id='image-container'></div>
     <ul class='pokemon-list'></ul>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
