--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   </head>
   <body>
     <button id='show-modal'>Show modal</button>
-    <div id='modal-container'></div>
-    <div id='image-container'></div>
+    <div id='modal-container'>
+      <div id='image-container'>
+      </div>
+    </div>
     <ul class='pokemon-list'></ul>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
