--- a/index.html
+++ b/index.html
@@ -12,7 +12,30 @@
     <title>Simple JS App</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css"/>
   </head>
-  <body>
+  <header>
+    <nav class="navbar navbar navbar-light" style="background-color:rgb(190, 207, 200);">
+      <a class="navbar-brand" href="#">
+        <img src="img/pokemon.logo.png" alt="pokemon logo" width="30" height="30" class=""> <!-- want this to be on the right next to the hamburger dropdown -->
+        Pokédex
+      </a>
+      <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" id="search-bar" placeholder="Search" aria-label="Search">
+      </form>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Generations</a>
+          </li>
+        </ul>
+    </nav>
+  </header>
+  <body style="background-color:rgb(64, 75, 87);">
     <div class="modal" tabindex="-1" role="dialog">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
