--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
         <img src="img/pokemon.logo.png" alt="pokemon logo" width="30" height="30" class=""> <!-- want this to be on the right next to the hamburger dropdown -->
         Pokédex
       </a>
-      <form class="form-inline">
-        <input class="form-control mr-sm-2" type="search" id="search-bar" placeholder="Search" aria-label="Search">
-      </form>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -36,23 +33,24 @@
     </nav>
   </header>
   <body style="background-color:rgb(64, 75, 87);">
-    <div class="modal" tabindex="-1" role="dialog">
+    <div class="modal" tabindex="-1" role="dialog" id="modal-container">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title"><pokemon class="name"></pokemon></h5>
+            <h5 id="pokemon-name" class="modal-title"></h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
-            <p class="pokemon-height"></p>
-            <p class="pokemon-type"></p>
+            <img src="" id="pokemon-image" alt="Pokemon Image">
+            <p id="pokemon-height"></p>
+            <p id="pokemon-type"></p>
           </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <!-- <button type="button" class="btn btn-primary">Save changes</button>> -->
           </div>
         </div>
       </div>
