added comment in css and height for pokemon image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <nav class="navbar navbar navbar-light" style="background-color:rgb(190, 207, 200);">
       <a class="navbar-brand" href="#">
-        <img src="img/pokemon.logo.png" alt="pokemon logo" width="30" height="30" class=""> <!-- want this to be on the right next to the hamburger dropdown -->
+        <img src="img/pokemon.logo.png" alt="pokemon logo" width="30" height="30" class="">
         Pokédex
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +43,7 @@
             </button>
           </div>
           <div class="modal-body">
-            <img src="" id="pokemon-image" alt="Pokemon Image">
+            <img src="" id="pokemon-image" alt="Pokemon Image" height="150">
             <p id="pokemon-height"></p>
             <p id="pokemon-type"></p>
           </div>
