--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Generations</a>
+            <a class="nav-link" href="#">Something Here</a>
           </li>
         </ul>
     </nav>
