--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="icon" href="img/pokemon.logo.png">
     <link rel="stylesheet" 
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
@@ -15,8 +16,8 @@
   <header>
     <nav class="navbar navbar navbar-light" style="background-color:rgb(190, 207, 200);">
       <a class="navbar-brand" href="#">
-        <img src="img/pokemon.logo.png" alt="pokemon logo" width="30" height="30" class="">
-        Pokédex
+        <img src="img/pokemon-logo-2.svg" alt="pokemon logo" height="70" class="">
+        <strong>Pokédex</strong>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -33,6 +34,9 @@
     </nav>
   </header>
   <body style="background-color:rgb(64, 75, 87);">
+    <div>
+      <img src="img/gotta-catch-em-all.png" alt="gotta-catch-em-all" width=15% class="rounded mx-auto d-block">
+    </div>
     <div class="modal" tabindex="-1" role="dialog" id="modal-container">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
