update text on navbar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar navbar-light" style="background-color:rgb(190, 207, 200);">
       <a class="navbar-brand" href="#">
         <img src="img/pokemon-logo-2.svg" alt="pokemon logo" height="70" class="">
-        <strong>Pokédex</strong>
+        <strong>Pokédex: </strong>Gotta Catch Em All!
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
