update animation (commented out)

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </header>
   <body style="background-color:rgb(64, 75, 87);">
     <div>
-      <img src="img/gotta-catch-em-all.png" alt="gotta-catch-em-all" width=15% class="rounded mx-auto d-block">
+      <img src="img/gotta-catch-em-all.png" alt="gotta-catch-em-all" width=15% class="gotta-catch-em-all">
     </div>
     <div class="modal" tabindex="-1" role="dialog" id="modal-container">
       <div class="modal-dialog" role="document">
