update styling and try to fix animation

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css"/>
   </head>
   <header>
-    <nav class="navbar navbar navbar-light" style="background-color:rgb(190, 207, 200);">
+    <nav class="navbar navbar navbar-dark" style="background-color:rgb(27, 27, 27);">
       <a class="navbar-brand" href="#">
-        <img src="img/pokemon-logo-2.svg" alt="pokemon logo" height="70" class="">
+        <img src="img/pokemon-logo-2.svg" alt="pokemon logo" height="90" class="">
         <strong>Pokédex: </strong>Gotta Catch Em All!
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,7 @@
             </button>
           </div>
           <div class="modal-body">
-            <img src="" id="pokemon-image" alt="Pokemon Image" height="150">
+            <img src="" id="pokemon-image" alt="Pokemon Image" width="180">
             <p id="pokemon-height"></p>
             <p id="pokemon-type"></p>
           </div>
