--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       <a class="navbar-brand" href="#">
         <img src="img/pokemon-logo-2.svg" alt="pokemon logo" height="90" class="">
         <strong>Pokédex: </strong>Gotta Catch Em All!
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" id="searchIn" type="search" placeholder="Search Pokédex..." aria-label="Search">
+          <button class="btn my-2 my-sm-0" type="submit">Search</button>
+        </form>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
