--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       <a class="navbar-brand" href="#">
         <img src="img/pokemon-logo-2.svg" alt="pokemon logo" height="90" class="">
         <strong>Pokédex: </strong>Gotta Catch Em All!
-        <form class="form-inline">
-          <input class="form-control mr-sm-2" id="searchIn" type="search" placeholder="Search Pokédex..." aria-label="Search">
-          <button class="btn my-2 my-sm-0" type="submit">Search</button>
-        </form>
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <form class="form-inline">
+        <input class="form-control mr-sm-2" id="pokemon-search" type="search" placeholder="Search Pokédex..." aria-label="Search">
+        <button class="btn my-2 my-sm-0" type="submit">Search</button>
+      </form>
+      <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -32,15 +32,12 @@
           <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Something Here</a>
-          </li>
-        </ul>
+        </ul> -->
     </nav>
   </header>
   <body style="background-color:rgb(64, 75, 87);">
-    <div>
-      <img src="img/gotta-catch-em-all.png" alt="gotta-catch-em-all" width=15% class="gotta-catch-em-all">
+    <div id="pokemon-animation">
+      <img src="img/gotta-catch-em-all.png" alt="gotta-catch-em-all" class="gotta-catch-em-all">
     </div>
     <div class="modal" tabindex="-1" role="dialog" id="modal-container">
       <div class="modal-dialog" role="document">
