Update README and add prettier config

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Simple JS App</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css"/>
   </head>
-  <header>
+  <header class="container-fluid">
     <nav class="navbar navbar navbar-dark" style="background-color:rgb(27, 27, 27);">
       <a class="navbar-brand" href="#">
         <img src="img/pokemon-logo-2.svg" alt="pokemon logo" height="90" class="">
