link minified files in index

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Simple JS App</title>
-    <link href="css/styles.css" rel="stylesheet" type="text/css"/>
+    <link href="dist/minified.css" rel="stylesheet" type="text/css"/>
   </head>
   <header class="container-fluid">
     <nav class="navbar navbar navbar-dark" style="background-color:rgb(27, 27, 27);">
@@ -68,6 +68,6 @@
       integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="js/scripts.js"></script>
+    <script src="dist/minified.js"></script>
   </body>
 </html>
