update navbar/try to make fluid

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar navbar-dark" style="background-color:rgb(27, 27, 27);">
       <a class="navbar-brand" href="#">
         <img src="img/pokemon-logo-2.svg" alt="pokemon logo" height="90" class="">
-        <strong>Pokédex: </strong>Gotta Catch Em All!
+        <p class="navbar-text"><strong>Pokédex: </strong>Gotta Catch Em All!</p>
       </a>
       <form class="form-inline">
         <input class="form-control mr-sm-2" id="pokemon-search" type="search" placeholder="Search Pokédex..." aria-label="Search">
