update modal container and navbar image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class="container-fluid">
     <nav class="navbar navbar navbar-dark" style="background-color:rgb(27, 27, 27);">
       <a class="navbar-brand" href="#">
-        <img src="img/pokemon-logo-2.svg" alt="pokemon logo" height="90" class="">
+        <img src="img/pokemon-logo-2.svg" class="img-responsive" alt="Responsive image" height="90">
         <p class="navbar-text"><strong>Pokédex: </strong>Gotta Catch Em All!</p>
       </a>
       <form class="form-inline">
@@ -39,7 +39,7 @@
     <div id="pokemon-animation">
       <img src="img/gotta-catch-em-all.png" alt="gotta-catch-em-all" class="gotta-catch-em-all">
     </div>
-    <div class="modal" tabindex="-1" role="dialog" id="modal-container">
+    <div class="modal container-fluid" tabindex="-1" role="dialog" id="modal-container">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
