--- a/index.html
+++ b/index.html
@@ -24,22 +24,13 @@
         <input class="form-control mr-sm-2" id="pokemon-search" type="search" placeholder="Search Pokédex..." aria-label="Search">
         <button class="btn my-2 my-sm-0" type="submit">Search</button>
       </form>
-      <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-        </ul> -->
     </nav>
   </header>
   <body style="background-color:rgb(64, 75, 87);">
     <div id="pokemon-animation">
       <img src="img/gotta-catch-em-all.png" alt="gotta-catch-em-all" class="gotta-catch-em-all">
     </div>
-    <div class="modal container-fluid" tabindex="-1" role="dialog" id="modal-container">
+    <div class="modal" tabindex="-1" role="dialog" id="modal-container">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
